force-app/main/default/objects/MobileEmailObject__c/MobileEmailObject__c.object-meta.xml
<CustomObject>
    <label>MobileEmailObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MobileEmailObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MobileEmailObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>