force-app/main/default/objects/MobileEmailObject__c/fields/CreatedDateDisplay__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateDisplay__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDateDisplay</label>
    <type>DateTime</type>
</CustomField>