force-app/main/default/objects/MobileEmailObject__c/fields/DeviceIdentifier__c.field-meta.xml
<CustomField>
    <fullName>DeviceIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DeviceIdentifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>